    objects when loading large files. Note that this change means that a response, once parsed, may not be parsed
    again from the same response object unless you call response.bufferUp() first, which will buffer the full response
    into memory.
    <https://github.com/jhy/jsoup/issues/904>

  * Performance improvements in text and HTML generation (through less GC).

  * Reduced memory consumption of text, scripts, and comments in the DOM by 40%, by refactoring the node
    hierarchy to not track childnodes or attributes by default for lead nodes. For the average document, that's about a
    30% memory reduction.
    <https://github.com/jhy/jsoup/issues/911>

  * Reduced memory consumption of Elements by refactoring their Attributes to be a simple pair of arrays, vs a
    LinkedHashSet.
    <https://github.com/jhy/jsoup/issues/911>

  * Added Element.appendTo(parent) to simplify slinging elements about.
    <https://github.com/jhy/jsoup/pull/662>

  * Updated Element.text() and the :contains(text) selector to consider &nbsp; character as spaces.

  * Bugfix: if a document was was redecoded after character set detection, the HTML parser was not reset correctly,
    which could lead to an incorrect DOM.
    <https://github.com/jhy/jsoup/issues/877>

  * Bugfix: attributes with the same name but different case would be incorrectly treated as different attributes.
    <https://github.com/jhy/jsoup/pull/903>

  * Bugfix: self-closing tags for known empty elements were incorrectly treated as errors.
    <https://github.com/jhy/jsoup/issues/868>

  * Bugfix: fixed an issue where a self-closing title, noframes, or style tag would cause the rest of the page to be
    incorrectly parsed as data or text.
    <https://github.com/jhy/jsoup/issues/906>

*** Release 1.10.3 [2017-Jun-11]
  * Added Elements.eachText() and Elements.eachAttr(name), which return a list of Element's text or attribute values,